[chore] 학습 로그 집계 로직 쿼리 집계로 개선